--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,66 @@ nav {
     border-bottom: 1rem solid #cccccc;
     border-top: 1rem solid #cccccc;
 }
+.menu-full {
+    position: absolute;
+    background-color: #f6f6f6;
+    z-index: 100;
+    border: 2rem solid #333333;
+}
+.menu-full li {
+    text-align: left;
+    font-family: 'aleoregular', sans-serif;
+}
+.menu-products h2, .menu-brands h2, .menu-extra h2 {
+    background-color: #e9e9e9;
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 18rem;
+    line-height: 30rem;
+    padding-top:5rem;
+    text-transform: uppercase;
+    color: #000000;
+    border-bottom: 2rem solid #d2d0d0;
+}
+.menu-products-primary, .menu-products-secondary {
+    display: inline-block;
+    vertical-align: top;
+}
+.menu-products, .menu-brands, .menu-extra {
+    display: inline-block;
+    vertical-align: top;
+    border-right: 2rem solid #d2d0d0;
+    height: auto;
+    padding-bottom: 5rem;
+}
+.menu-brands, .menu-extra {
+    margin-left:-4rem;
+}
+
+.menu-products ul li a, .menu-brands ul li a, .menu-extra ul li a{
+    padding-left: 20rem;
+    padding-right: 20rem;
+    font-family: 'aleoregular', sans-serif;
+    font-size: 14rem;
+}
+.menu-products ul li, .menu-brands ul li, .menu-extra ul li {
+    list-style: none;
+}
+.menu-full ul li:hover a {
+    background-color: #333333;
+    color: #ffffff!important;
+}
+.menu-extra>a {
+    padding-left: 20rem;
+    padding-right: 20rem;
+}
+.menu-extra a img {
+    padding-left: 20rem;
+    padding-right: 20rem;
+}
+.menu-sales a {
+    background-color: #62214e;
+    color: #ffffff!important;
+}
 /* Search -------------------------------------------------------------------*/
 .search-button {
     background: url('../images/icons/Search.png') center no-repeat;
@@ -870,7 +930,10 @@ footer {
     nav .container {
         width: 304rem;
     }
-    nav ul li {
+    nav .nav-main li {
+        display: none;
+    }
+    .menu-full {
         display: none;
     }
     .mobile-button {
@@ -901,6 +964,9 @@ footer {
     }
     .cart-mobile {
         background: url('../images/icons/Cart.png') center no-repeat;
+    }
+    .mobile-menu {
+        display: none;
     }
     .carousel .container {
         margin: 0;
@@ -1274,6 +1340,14 @@ footer {
     .mobile-button {
         display: none;
     }
+    .menu-full {
+        display: none;
+        top: 35rem;
+        left: 10rem;
+    }
+    .mobile-menu {
+        display: none;
+    }
     .notification {
         right: 20rem;
     }
@@ -1307,38 +1381,38 @@ footer {
     .account-mobile, .cart-mobile {
         display: none;
     }
-    nav ul li {
+    nav .nav-main>li {
         float: left;
         list-style: none;
         height: 35rem;
         text-align: center;
     }
-    nav ul li:first-child {
+    nav .nav-main>li:first-child {
         margin-left: -10rem;
         padding-left: 11rem;
         padding-right: 11rem;
     }
-    nav ul li:nth-child(2) {
+    nav .nav-main>li:nth-child(2) {
         padding-left: 27rem;
         padding-right: 19rem;
     }
-    nav ul li:nth-child(3) {
+    nav .nav-main>li:nth-child(3) {
         padding-left: 20rem;
         padding-right: 19rem;
     }
-    nav ul li:nth-child(4) {
+    nav .nav-main>li:nth-child(4) {
         padding-left: 18.5rem;
         padding-right: 20rem;
     }
-    nav ul li:nth-child(5) {
+    nav .nav-main>li:nth-child(5) {
         padding-left: 20rem;
         padding-right: 20rem;
     }
-    nav ul li:nth-child(6) {
+    nav .nav-main>li:nth-child(6) {
         padding-left: 20rem;
         padding-right: 20rem;
     }
-    nav ul li a {
+    nav .nav-main>li a {
         display: table-cell;
         height: 100%;
         color: #000000;
@@ -1347,15 +1421,18 @@ footer {
         text-decoration: none;
         padding-top: 11rem;
     }
-    nav ul li:hover a {
+    nav .nav-main>li:hover>a {
         color: #ffffff;
     }
-    nav ul li:hover {
+    nav .nav-main>li:hover {
         background-color: #000000;
     }
-    nav ul li {
+    nav .nav-main>li {
         display: table;
         vertical-align: bottom;
+    }
+    .menu-extra {
+        display: none;
     }
     .search-wrapper {
         width: 40rem;
@@ -1713,13 +1790,13 @@ footer {
     .account-mobile, .cart-mobile {
         display: none;
     }
-    nav ul li {
+    nav .nav-main>li {
         float: left;
         list-style: none;
         width: 74rem;
         text-align: center;
     }
-    nav ul li a {
+    nav .nav-main li>a {
         color: #000000;
         display: block;
         font-family: 'oswaldlight', sans-serif;
@@ -1727,11 +1804,26 @@ footer {
         text-decoration: none;
         line-height: 35rem;
     }
-    nav ul li:hover a {
+    .menu-full h2 {
+        font-size: 18rem;
+    }
+    .menu-extra a img {
+        display: block;
+    }
+    .menu-brands, .menu-products {
+        min-height:410rem;
+    }
+    nav .nav-main>li:hover>a {
         color: #ffffff;
     }
-    nav ul li:hover {
+    nav .nav-main>li:hover {
         background-color: #167c9a;
+    }
+    .menu-full {
+        display: none;
+    }
+    .mobile-menu {
+        display: none;
     }
     .search-wrapper {
         width: 247rem;
