--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,33 @@ nav {
     background-color: #62214e;
     color: #ffffff!important;
 }
+.mobile-menu {
+    position: absolute;
+    width: 300rem;
+    z-index: 1000;
+    top: 35rem;
+    background-color: #333333;
+    color: #ffffff;
+}
+.mobile-menu ul {
+    list-style: none;
+}
+.mobile-menu ul li {
+    padding: 17rem 15rem 15rem 15rem;
+    background-color: #666666;
+    margin: 2rem;
+
+}
+.mobile-menu ul li:hover {
+    background-color: #e9e9e9;
+    color: #333333;
+}
+.mobile-menu ul li>a {
+    color: #ffffff;
+    text-decoration: none;
+    font-family: 'oswaldlight', sans-serif;
+    font-size: 18rem;
+}
 /* Search -------------------------------------------------------------------*/
 .search-button {
     background: url('../images/icons/Search.png') center no-repeat;
