--- a/css/styles.css
+++ b/css/styles.css
@@ -243,10 +243,11 @@ nav {
     padding: 17rem 15rem 15rem 15rem;
     background-color: #666666;
     margin: 2rem;
-
 }
 .mobile-menu ul li:hover {
     background-color: #e9e9e9;
+}
+.mobile-menu ul li:hover a {
     color: #333333;
 }
 .mobile-menu ul li>a {
@@ -254,6 +255,31 @@ nav {
     text-decoration: none;
     font-family: 'oswaldlight', sans-serif;
     font-size: 18rem;
+}
+.dropdown-menu {
+    position: absolute;
+    display: none;
+    background: #333333;
+    width: 300rem;
+    top: 50rem;
+    left:-2rem;
+}
+.drop-icon-closed {
+    height: 12rem;
+    width: 20rem;
+    background: url('../images/icons/icons.png') -295rem -13rem no-repeat;
+    float: right;
+    z-index: 1001;
+}
+.drop-icon-opened {
+    height: 12rem;
+    width: 20rem;
+    background: url('../images/icons/icons.png') -295rem -26rem no-repeat;
+    float: right;
+    z-index: 1001;
+}
+.mobile-menu-primary {
+    position: relative;
 }
 /* Search -------------------------------------------------------------------*/
 .search-button {
